link to github project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
+    <h1><a href="https://github.com/foursquare/hoursparser.js">Hoursparser.js</a> Demo</h1>
+    <p/>
     enter hours:<br/>
     <textarea id="input" rows="20" cols="60">4am-5pm m-f</textarea>
     <p/>
